# DiffTimeline

./: .gitignore  .gitmodules  Application.hs  Building.md  Diff.hs  Difftimeline.cabal  Foundation.hs  Gemfile  GitQuery.hs  LICENSE  Makefile  README  README.md  Settings.hs  StaticFiles.hs  devel.hs  difftimeline.css  difftimeline.js  difftimeline.rb  flatten.sh  hsDiffTest.hs  icanhaz.extern.js  index.html  main.hs  params.json  prepare.ps1  release.ps1  release.sh  test.hs  theme-to-css.vim
Difftimeline/: .gitignore  Application.hs  BaseLayer.hs  Blame.hs  CommitDiff.hs  Contract.hs  Diff.hs  DiffWorkingDirectory.hs  Difftimeline.cabal  Externs.hs  Foundation.hs  GitIgnore.hs  GitQuery.hs  Import.hs  Makefile  RequestHandler.hs  Settings.hs  StaticFiles.hs  Types.hs  main.hs
Difftimeline/Handler/: Root.hs
Difftimeline/config/: routes
Handler/: Root.hs
binaries/: difftimeline-1.0-Linux-x64.tar.bz2  difftimeline-1.0-Linux.tar.bz2  difftimeline-1.0.1-Linux-x64.tar.bz2  difftimeline-1.0.1-osx.tar.bz2
config/: routes
deploy/: Procfile
ember/: index.html
ember/css/: syntax-highlight.css
ember/js/: app.js  tinysyntaxhighlighter.js
ember/js/libs/: ember-data.js  ember.js
lib/: cached_repository.rb  delta.rb  diff.rb  diffset.rb  objects.rb  packfile.rb  repository.rb  sha_ref.rb
static-content/: Makefile  TSDifftimeline.csproj  TSDifftimeline.sln  base_page.html  difftimeline.css  difftimeline.js  jquery-scrollTo.js  jquery-ui-1.10.2.custom.min.js  syntax-highlight.css  tinysyntaxhighlighter.js  tinysyntaxhighlighter.ts  tsconfig.json
static-content/frontend/: blameshower.js  blameshower.ts  branch_list.js  branch_list.ts  breadcrumb.js  breadcrumb.ts  commit.js  commit.ts  commitcomparer.js  commitcomparer.ts  commitrenderer.js  commitrenderer.ts  constants.ts  diffmanipulator.js  diffmanipulator.ts  difftimeline.extern.ts  fileblob.js  fileblob.ts  filecomparer.js  filecomparer.ts  filerenderer.js  filerenderer.ts  global_constant.ts  global_constants.js  init.js  init.ts  keybindings.js  keybindings.ts  linealign.js  linealign.ts  project.js  project.ts  resultset.js  resultset.ts  tsconfig.json
stylesheets/: stylesheet.css
test/: blame_test.hs  diff_test.hs  diff_test.rb  encoding_pb.txt  file1_dest.txt  file1_orig.txt  huge1.cpp  huge2.cpp  huge3.cpp  ocaml_comment.ml  overlap.txt  tester.hs
test/externs/: difftimeline.extern.js  icanhaz.extern.js  jquery.ext.js
test/second_folder_test/: aofjae  dioa  ll
