name:              Difftimeline
version:           1.0
license:           BSD3
license-file:      LICENSE
author:            Vincent Berthoux
maintainer:        Vincent Berthoux
synopsis:          Git repository driller
description:       Explore the history of a given file in your browser.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/Twinside/DiffTimeline

Flag Dynlink
    Description: Enable linking on MacOSX
    Default: False

executable         difftimeline
    if flag(Dynlink)
        ghc-options: -Wall -threaded -O2 -optl-pthread
    else
        ghc-options: -optl-static -static -Wall -threaded -O2 -optl-pthread

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6        && < 0.7
                 , directory                     >= 1.2        && < 1.3
                 , bytestring                    >= 0.9        && < 0.11
                 , file-embed                    >= 0.0.4      && < 0.1
                 , filepath                      >= 1.3        && < 1.4
                 , hit-simple                    >= 0.3        && < 0.4
                 , monad-control                 >= 0.3        && < 0.4
                 , mtl                           >= 2.0        && < 2.2
                 , template-haskell
                 , text                          >= 0.11       && < 0.12
                 , transformers                  >= 0.3        && < 0.4
                 , vector                        >= 0.9.1      && < 0.11
                 , vector-algorithms             >= 0.5.4.1    && < 0.6

                 , yesod-core                    >= 1.1        && < 1.2
                 , yesod-json                    >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , fast-logger                   >= 0.2.2      && < 0.3

                 , wai                           >= 1.3        && < 1.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , wai-handler-launch            >= 1.3.1      && < 1.4
                 , network                       >= 2.3        && < 2.4
                 , Glob                          >= 0.7.2      && < 0.8

                 , time                          >= 1.2        && < 1.5

                 , ClosureExternalProducer       >= 0.1        && < 0.2

