name:              Difftimeline
version:           1.0
license:           BSD3
license-file:      LICENSE
author:            Vincent Berthoux
maintainer:        Vincent Berthoux
synopsis:          Git repository driller
description:       Explore the history of a given file in your browser.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          https://github.com/Twinside/DiffTimeline

Flag Dynlink
    Description: Enable linking on MacOSX
    Default: False

executable         difftimeline
    if flag(Dynlink)
        ghc-options: -Wall -threaded -O2 -optl-pthread -rtsopts
    else
        ghc-options: -optl-static -static -Wall -threaded -O2 -optl-pthread -rtsopts
    ghc-prof-options: -optl-static -static -Wall -threaded -prof -auto-all -rtsopts

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , aeson                         >= 0.6
                 , containers
                 , directory                     >= 1.2
                 , bytestring                    >= 0.9
                 , file-embed                    >= 0.0.4
                 , filepath                      >= 1.3
                 , hit                           >= 0.6.4
                 , monad-control                 >= 0.3
                 , mtl                           >= 2.0
                 , template-haskell
                 , text                          >= 0.11
                 , transformers                  >= 0.3
                 , vector                        >= 0.9.1
                 , vector-algorithms             >= 0.5.4.1
                 , byteable
                 , system-filepath
                 , hourglass

                 , yesod                         >= 1.2
                 , yesod-core                    >= 1.2.1
                 , fast-logger                   
                 , monad-logger                  >= 0.3.4

                 , wai                           >= 1.4
                 , wai-extra                     >= 1.3
                 , wai-handler-launch            >= 1.3.1
                 , network                       >= 2.3
                 , Glob                          >= 0.7.2

                 , time                          >= 1.2

                 , ClosureExternalProducer       >= 0.1        && < 0.2

