name:              Difftimeline
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Vincent Berthoux
maintainer:        Vincent Berthoux
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://Difftimeline.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Handler.Root
                     Diff
                     GitQuery

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

executable         Difftimeline
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod-core                    >= 0.10       && < 0.11
                 , yesod-json                    >= 0.3        && < 0.4
                 , yesod-static                  >= 0.10       && < 0.11
                 , yesod-default                 >= 0.6        && < 0.7
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-text              >= 0.11       && < 0.12
                 , shakespeare-js                >= 0.11       && < 0.12
                 , wai                           >= 1.1        && < 1.2
                 , wai-extra                     >= 1.1        && < 1.2
                 , transformers                  >= 0.2        && < 0.3
                 , monad-control                 >= 0.3        && < 0.4
                 , yaml                          >= 0.5        && < 0.6
                 , hit                           >= 0.3        && < 0.4
                 , directory                     >= 1.1        && < 1.2
                 , vector                        >= 0.9.1      && < 0.10
                 , filepath                      >= 1.3        && < 1.4
                 , warp                          >= 1.1        && < 1.2
                 , simple-sendfile               == 0.2.1

